--- a/BS-DemoDayProject/coupons.html
+++ b/BS-DemoDayProject/coupons.html
@@ -31,10 +31,10 @@
                                 <div class="certified-group">
                                     <div class="certified d-flex align-items-center">
                                         <div class="certified-pic">
-                                            <img src="images/line.svg" alt="">
+                                            <img src="images/facebook.svg" alt="">
                                         </div>
                                         <div class="certified-text p-2 text-start">
-                                            <span>LINE</span>
+                                            <span>FaceBook</span>
                                         </div>
                                     </div>
                                     <div class="certified d-flex align-items-center">
