--- a/BS-DemoDayProject/account-membership.html
+++ b/BS-DemoDayProject/account-membership.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>account</title>
+        <title>account-membership</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-        <link rel="stylesheet" href="account.css">
+        <link rel="stylesheet" href="account-membership.css">
     </head>
     <body>
         <section class="account-main p-5">
@@ -34,7 +34,7 @@
                                             <img src="images/facebook.svg" alt="">
                                         </div>
                                         <div class="certified-text p-2 text-start">
-                                            <span>Facebook</span>
+                                            <span>FaceBook</span>
                                         </div>
                                     </div>
                                     <div class="certified d-flex align-items-center">
@@ -56,13 +56,13 @@
                                     </a>
                                 </li>
                                 <li class="list-item">
-                                    <a id="account-class" class="d-flex align-items-center p-3" href="account-membership.html">
+                                    <a id="account-class" class="d-flex align-items-center p-3" href="#">
                                         <span class="icon-box"><i class="fa-solid fa-gem"></i></span>
                                         <span class="list-item-title ps-3">我的會籍禮遇</span>
                                     </a>
                                 </li>
                                 <li class="list-item">
-                                    <a id="account-coupons" class="d-flex align-items-center p-3" href="coupons.html">
+                                    <a id="account-coupons" class="d-flex align-items-center p-3" href="#">
                                         <span class="icon-box"><i class="fa-solid fa-ticket"></i></span>
                                         <span class="list-item-title ps-3">KKday 折扣券</span>
                                         <span class="coupon-quantity">20</span>
@@ -91,78 +91,34 @@
                     </div>
                     <div class="col-12 col-xl-9">
                         <div class="account-details">
-                            <div class="details-title pt-3 mt-5">
-                                <span class="fs-3 ps-3">帳號設定</span>
+                            <div class="details-title py-2 mt-5">
+                                <span class="fs-3 ps-3">我的會籍禮遇</span>
                                 <ul class="filter d-flex mt-5">
                                     <li>
-                                        <a class="filter-link pb-3 me-3" href="#">基本資料</a>
+                                        <a class="filter-link pb-4 me-3" href="#">白銀會員</a>
                                     </li>
                                     <li>
-                                        <a class="filter-link pb-3 me-3" href="#">常用旅客</a>
-                                    </li>
-                                    <li>
-                                        <a class="filter-link pb-3 me-3" href="#">帳號安全</a>
+                                        <a class="filter-link pb-4 me-3" href="#">黃金會員</a>
                                     </li>
                                 </ul>
                             </div>
-                            <div class="details-content p-4">
-                                <div class="row">
-                                    <div class="col-4">
-                                        <label for="">名</label>
-                                        <div class="input-group mb-3">
-                                            <input type="text" class="form-control" placeholder="名" aria-label="Username" aria-describedby="basic-addon1">
-                                        </div>
-                                    </div>
-                                    <div class="col-4">
-                                        <label for="">姓</label>
-                                        <div class="input-group mb-3">
-                                            <input type="text" class="form-control" placeholder="姓" aria-label="Username" aria-describedby="basic-addon1">
-                                        </div>
-                                    </div>
-                                    <div class="col-4">
-                                        <label for="">性別</label>
-                                        <select class="form-select" aria-label="Default select example">
-                                            <option selected>請選擇</option>
-                                            <option value="1">不便透漏</option>
-                                            <option value="2">男</option>
-                                            <option value="3">女</option>
-                                        </select>
-                                    </div>
+                        </div>
+                        <div class="details-content-membership px-4 my-4">
+                            <div class="member-tier d-flex align-items-center">
+                                <span class="fs-4">白銀會員</span>
+                                <div class="member-icon">
+                                    <img src="images/icon_tier_silver.svg" alt="">
                                 </div>
-                                <div class="row">
-                                    <div class="col-4">
-                                        <label for="">出生日期</label>
-                                        <div class="input-group mb-3">
-                                            <input type="date" class="form-control" placeholder="姓" aria-label="Username" aria-describedby="basic-addon1">
-                                        </div>
-                                    </div>
-                                    <div class="col-4">
-                                        <label for="">國家/地區</label>
-                                        <select class="form-select" aria-label="Default select example">
-                                            <option selected>請選擇</option>
-                                            <option value="1">臺灣</option>
-                                            <option value="2">日本</option>
-                                            <option value="3">韓國</option>
-                                        </select>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-4">
-                                        <label for="">電話號碼</label>
-                                        <div class="input-group mb-3">
-                                            <input type="text" class="form-control" placeholder="電話號碼" aria-label="Username" aria-describedby="basic-addon1">
-                                        </div>
-                                    </div>
-                                    <div class="col-8">
-                                        <label for="">聯絡 E-mail*</label>
-                                        <div class="input-group mb-3">
-                                            <input type="email" class="form-control" placeholder="聯絡 E-mail*" aria-label="Username" aria-describedby="basic-addon1">
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="save ms-auto">
-                                    <a class="save-link px-3 py-2" href="#">儲存</a>
-                                </div>
+                            </div>
+                        </div>
+                        <div class="details-content-membership px-4 my-4">
+                            <div class="member-title">
+                                <span class="fs-4">經驗值如何獲取?</span>
+                            </div>
+                        </div>
+                        <div class="details-content-membership px-4 my-4">
+                            <div class="member-title">
+                                <span class="fs-4">經驗值紀錄</span>
                             </div>
                         </div>
                     </div>
