--- a/BS-DemoDayProject/ThirdPartyLoginTest/test.html
+++ b/BS-DemoDayProject/ThirdPartyLoginTest/test.html
@@ -17,7 +17,7 @@
         appId      : '3389736944622065',//15碼數字字串不含大括號
         cookie     : true,
         xfbml      : true,
-        version    : '16.0' //筆者目前是v3.1
+        version    : 'v16.0' //筆者目前是v3.1
         });
         debugger;
         FB.AppEvents.logPageView();   
