--- a/BS-DemoDayProject/ThirdPartyLoginTest/test.html
+++ b/BS-DemoDayProject/ThirdPartyLoginTest/test.html
@@ -64,5 +64,59 @@
 
         }
     </script>
+    <script type="text/javascript">
+        //取得用戶姓名、email
+        function GetProfile() {
+            document.getElementById('content').innerHTML = "";//先清空顯示結果
+
+            //FB.api()使用說明：https://developers.facebook.com/docs/javascript/reference/FB.api
+            //取得用戶個資
+            FB.api("/me", "GET", { fields: 'last_name,first_name,name,email' }, function (user) {
+                //user物件的欄位：https://developers.facebook.com/docs/graph-api/reference/user
+                if (user.error) {
+                    console.log(response);
+                } else {
+                    
+                    document.getElementById('content').innerHTML = JSON.stringify(user);
+                }
+            });
+
+        }
+    </script>
+
+
+
+
+    <!--有些網站會做帳號和user FB帳號的綁定/解除綁定，或你想讓使用者刪除你的FB App，讓使用者下次可以切換不同FB帳號登入你的網站-->
+    <!--下面程式碼派得上用場-->
+    <script type="text/javascript">
+
+        //刪除使用者已授權你的FB App，好讓使用者下次重新授權你的FB App
+        //參考：https://stackoverflow.com/questions/6634212/remove-the-application-from-a-user-using-graph-api/7741978#7741978
+        //https://stackoverflow.com/questions/9050190/facebook-api-sdk-revoke-access
+        function Del_FB_App() {
+
+            FB.getLoginStatus(function (response) {//取得目前user是否登入FB網站
+                //debug用
+                console.log(response);
+                if (response.status === 'connected') {
+                    //抓userID
+                    //let userID = response["authResponse"]["userID"];
+
+
+                    FB.api("/me/permissions", "DELETE", function (response) {
+                        console.log("刪除結果");
+                        console.log(response); //gives true on app delete success
+                        //最後一個參數傳遞true避免cache
+                        FB.getLoginStatus(function (res) { }, true);//強制刷新cache避免login status下次誤判
+                        
+                    });
+
+                } else { 
+                    console.log("無法刪除FB App");
+                }
+            });
+        } 
+    </script> 
 </body>
 </html>
