--- a/BS-DemoDayProject/ThirdPartyLoginTest/test.html
+++ b/BS-DemoDayProject/ThirdPartyLoginTest/test.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <button onclick="FBLogin()">登入</button>
-    <button onclick="logout()">登出</button>
+    <button onclick="Del_FB_App()">登出</button>
     
     <script>
         window.fbAsyncInit = function() {
